2 files modified, 1 added

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My app</title>
-    <meta charset="UTF-8" />
-  </head>
+
   <body>
     <my-app>Loading...</my-app>
+
+
+    <h1>Contact Us</h1>
+
+
+
+<h3>Customer Service</h3>
+<ul>
+  <l1>
+    <div>Ronald Lopez</div>
+      <div>562 988 4232</div>
+        <div>rblopez@urbanscience.com</div>
+
+  </li>
+
+</ul>
+
+
+<h3>Suppliers</h3>
+  <ul>
+    <l1>
+      <div>Tasdyque Syed</div>
+        <div>562 988 5189</div>
+          <div>tsyed@urbanscience.com</div>
+  
+    </li>
+    <br/>
+    <l1>
+      <div>Amran Uddin</div>
+        <div>562 988 4232</div>
+          <div>amran.uddin@channelvantage.com</div>
+  
+    </li>
+  
+  </ul>
+
+
   </body>
 </html>
